WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157284
REGRESSION(
r199964
): Animation on pseudo elements doesn't trigger if first frame matches the current style
https://bugs.webkit.org/show_bug.cgi?id=157284
Summary
REGRESSION(r199964): Animation on pseudo elements doesn't trigger if first fr...
Antti Koivisto
Reported
2016-05-02 16:08:57 PDT
There is a bug in diffing animated style.
Attachments
patch
(4.82 KB, patch)
2016-05-02 16:15 PDT
,
Antti Koivisto
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2016-05-02 16:09:19 PDT
rdar://problem/26006190
Antti Koivisto
Comment 2
2016-05-02 16:15:54 PDT
Created
attachment 277941
[details]
patch
Antti Koivisto
Comment 3
2016-05-02 16:48:29 PDT
https://trac.webkit.org/r200347
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug