REGRESSION(r199964): Animation on pseudo elements doesn't trigger if first frame matches the current style https://bugs.webkit.org/show_bug.cgi?id=157284

Reviewed by Simon Fraser.

Source/WebCore:

r199964 accidentally changed the logic for computing style change for animations.

Test: fast/css/animation-pseudo-style-change.html

* style/RenderTreeUpdater.cpp:
(WebCore::RenderTreeUpdater::updateBeforeOrAfterPseudoElement):

    If there is an animated style determine the style change using it rather than the originally resolved style.

* style/StyleTreeResolver.cpp:
(WebCore::Style::TreeResolver::resolveElement):

    Here too.

LayoutTests:

* fast/css/animation-pseudo-style-change-expected.html: Added.
* fast/css/animation-pseudo-style-change.html: Added.



Canonical link: https://commits.webkit.org/175385@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200347 268f45cc-cd09-0410-ab3c-d52691b4dbfc